Add a new plunge type (#3170)
* Added a plunge type to be used when multiple depths of cuts are to be achieved and added a new linear ramping
* Added better sorting and let ramping continue the path where it reaches the target depth.
* Makes linear ramping the default